optimize server based on new db schema
