# docs/bin/openapi.json
@@ -55,13 +55,6 @@
                 ],
                 "type": "object"
             },
-            "RelationFilter": {
-                "type": "number",
-                "format": "double",
-                "example": 255,
-                "description": "Filter which uses of the address are considered relevant for the query.\n\nThis is a bitmask, so you can combine multiple options\nex: `RelationFilterType.Input & RelationFilterType.Output`\n\nNote: relations only apply to credentials and not to full bech32 addresses",
-                "pattern": "([01]?[0-9]?[0-9]|2[0-4][0-9]|25[0-5])"
-            },
             "AfterBlockPagination": {
                 "properties": {
                     "after": {
@@ -117,10 +110,6 @@
                 "allOf": [
                     {
                         "properties": {
-                            "relationFilter": {
-                                "$ref": "#/components/schemas/RelationFilter",
-                                "description": "Defaults to `RelationFilterType.NO_FILTER`"
-                            },
                             "addresses": {
                                 "items": {
                                     "$ref": "#/components/schemas/Address"
@@ -346,6 +335,13 @@
                 ],
                 "type": "object"
             },
+            "RelationFilter": {
+                "type": "number",
+                "format": "double",
+                "example": 255,
+                "description": "Filter which uses of the address are considered relevant for the query.\n\nThis is a bitmask, so you can combine multiple options\nex: `RelationFilterType.Input & RelationFilterType.Output`\n\nNote: relations only apply to credentials and not to full bech32 addresses",
+                "pattern": "([01]?[0-9]?[0-9]|2[0-4][0-9]|25[0-5])"
+            },
             "TransactionHistoryRequest": {
                 "allOf": [
                     {
@@ -494,6 +490,16 @@
                             }
                         }
                     },
+                    "409": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorShape"
+                                }
+                            }
+                        }
+                    },
                     "422": {
                         "description": "",
                         "content": {
@@ -544,7 +550,7 @@
                             }
                         }
                     },
-                    "422": {
+                    "409": {
                         "description": "",
                         "content": {
                             "application/json": {
@@ -635,6 +641,16 @@
                         }
                     },
                     "400": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorShape"
+                                }
+                            }
+                        }
+                    },
+                    "409": {
                         "description": "",
                         "content": {
                             "application/json": {
